# ExLib

./: FocusUltraSoundModel.cu  PennesDMDASolver.cxx  README  atropos.R  autobuild-crkit-release-1.5.2-linux.sh  catcherror.cpp  cmake.makefile  cpd.py  ex52_gpu_inline.h  exampleMxGPUArray.m  flames.m  hello.c  launcher.sge  log.txt  makefile  matrixdriver.cpp  measure.c  mrankwin.c  one_box.jou  otbScalarImageToTexturesFilter.cxx  printmatrix.m  realacos.m
DanielssonDistance/: BresenhamLine.cxx  CMakeLists.txt  DanielssonDistanceMapImageFilter.cxx  LineProfileFilter.cxx  SignedMaurerDistanceMapImageFilter.cxx  makefile
crkit_build/crkit/release-1.5.2/apps/continuous_staple/code/: CMakeLists.txt  itkContinuousSTAPLEImageFilter.cxx
otbScalarImageTextures/: CMakeLists.txt  README
staple/crkit_build/crkit/release-1.5.2/: AttributionNotice.txt  CMakeLists.txt
staple/crkit_build/crkit/release-1.5.2/apps/continuous_staple/: CMakeLists.txt
staple/crkit_build/crkit/release-1.5.2/apps/staple/: CMakeLists.txt
staple/crkit_build/crkit/release-1.5.2/common/crlVTKCommon/: CMakeLists.txt  crlVtkMeshIO.cxx  crlVtkMeshIO.h  vtkGIFTIReader.h  vtkGIFTIWriter.h
staple/crkit_build/crkit/release-1.5.2/common/include/: CMakeLists.txt  README-crlCommon.txt  crlCommonMath.h  crlConvertAndWriteScalarImage.h  crlDWIStudy.h  crlDWIStudy.txx  crlDilateLabelImageFilter.txx  crlDocumentedToolOutput.h  crlFastOps.cxx  crlFastOps.h  crlFileName.cxx  crlGeneralizedInstantiator.h  crlGeneralizedInstantiatorMacros.h  crlMFMUtils.h  crlNHDRFileUtils.cxx  crlOptimizerUtils.h  crlRobustMeanCostFunction.cxx  crlRobustMeanCostFunction.h  crlRobustMeanImageFilter.h  crlSingleLineMultipleCout.h  crlTaskProgress.cxx  crlTaskProgress.h  crlVectorImageUtils.h
staple/crkit_build/crkit/release-1.5.2/common/itkNLOPTOptimizers/: CMakeLists.txt  README.txt  itkNLOPTOptimizers.cxx  itkNLOPTOptimizers.h
staple/crkit_build/crkit/release-1.5.2/common/scripts/: autobuild-crkit-release-1.5.2-linux.sh  autobuild-crkit-release-1.5.2-mac64.sh  configuration.h.in
staple/crkit_build/crkit/release-1.5.2/data/: identity-transform.trsf  tensor_test.nrrd  tensor_test_ascii.nrrd
staple/crkit_build/crkit/release-1.5.2/dti/: .ignore  CMakeLists.txt
staple/crkit_build/crkit/release-1.5.2/dti/code/: CMakeLists.txt  README.txt  TensorDeformableResampler.cxx  TensorDeformableResampler.h  TensorExpFunctor.h  TensorLogFunctor.h  TensorScalarMultiplyFunctor.h  TensorScalarMultiplyFunctor.txx  TensorScalarParameterFunctor.h  TensorSumFunctor.h  crlCCSegmentFilter.cxx  crlCCSegmentFilter.h  crlDWIAutoSegmentCC.cxx  crlDWIConvertFSLToNHDR.cxx  crlDWIConvertFSLToNHDR.h  crlDWIConvertNHDRForFSL.cxx  crlDWIConvertNHDRForFSL.h  crlDWIRemoveGradientImage.h  crlDeformTensorImage.cxx  crlDiffusionTensorMeasuresFilter.cxx  crlDiffusionTensorMeasuresFilter.h  crlMFMSimpleModelSelection.cxx  crlMFMTensorResample.cxx  crlMFMTensorResampleImageFilter.h  crlMFMTensorResampleImageFilter.txx  crlMFMTractGenerator.cxx  crlMFMTractGenerator.h  crlMFMTractGenerator.txx  crlMFMWBConnectivity.txx  crlTensorClean.cxx  crlTensorClean.h  crlTensorExp.cxx  crlTensorInterpolateImageFunction.h  crlTensorLinearInterpolateImageFunction.h  crlTensorLinearInterpolateImageFunction.txx  crlTensorLog.cxx  crlTensorResamplerMain.cxx  crlTensorScalarMultiply.cxx  crlTensorShapeMeasures.cxx  crlTensorShapeMeasures.txx  (+13 more)
staple/crkit_build/crkit/release-1.5.2/registration/: CMakeLists.txt
staple/crkit_build/crkit/release-1.5.2/registration/code/: AttributionNotice.txt  CMakeLists.txt  copyright.txt  crlAffineMIRegistration.cxx  crlAffineMIRegistration2d.cxx  crlAffineNMIRegistration.cxx  crlAffineNormalizedCorrelationRegStepRegistration2d.cxx  crlAffineNormalizedCorrelationRegistration.cxx  crlAffineRegistration.cxx  crlAffineSSDRegistration.cxx  crlAnyTransformToAffineTransform.cxx  crlAnyTransformToAffineTransform2d.cxx  crlCommandIterationUpdate.h  crlComposeAffineTransforms.cxx  crlDirectedHausdorffDistanceImageFilter.h  crlDirectedHausdorffDistanceImageFilter.txx  crlHausdorffDistanceImageFilter.h  crlInvertDeformationField.cxx  crlLinearInterpolateImageFunction.h  crlLinearInterpolateImageFunction.txx  crlNonrigidBSplinePyramid.cxx  crlNonrigidBSplinePyramid2.cxx  crlNonrigidBSplinePyramidClass.h  crlNonrigidBSplinePyramidClass.txx  crlResampleToIsotropic.cxx  crlResampler.cxx  crlResampler2d.cxx  crlRigidMIRegistration.cxx  crlRigidMIRegistration2d.cxx  crlRigidNormalizedCorrelationRegistration.cxx  crlRigidNormalizedCorrelationRegistration2d.cxx  crlRigidNormalizedMIRegistration2d.cxx  crlRigidRegistration.cxx  crlScaleSkewVersor3DTransform.cxx  crlSimilarityMIRegistration.cxx  crlTransformMomentsInitialization.cxx
staple/crkit_build/crkit/release-1.5.2/tools/: CMakeLists.txt
staple/crkit_build/crkit/release-1.5.2/tools/code/: CMakeLists.txt  crlAdaptiveThreshold1.cxx  crlAnisotropicDiffusion.cxx  crlAtlasSample3.cxx  crlBinaryMorphology.cxx  crlBinaryMorphology.h  crlBinaryMorphology.txx  crlCannyEdgeDetection.cxx  crlCastSymMatFloatToDouble.cxx  crlChangeFormat4d.cxx  crlChangeFormatDicomSeries.cxx  crlChangeImageInformation.h  crlCheckerBoard.cxx  crlConnectedComponentFilter2d.cxx  crlConstructDisplacementFieldVector.cxx  crlConstructVectorImage.cxx  crlConstructVectorImage2d.cxx  crlConvertDICOMMOSAIC.cxx  crlConvertDICOMMOSAIC.h  crlConvertDICOMMOSAIC.txx  crlConvertImageToVectorImage.cxx  crlConvertVectorImageToImage2d3d.cxx  crlCopyImageWithGeometry.cxx  crlCorrelator.cxx  crlCreateLogOddsVectorAtlasFromTemplate.cxx  crlDICOMExtendDictionary.h  crlDICOMPrintPatientInfo.cxx  crlDICOMUpdateTagValue.cxx  crlDeformScalarImage.cxx  crlDemonsReg3d.cxx  crlDensityWeightedStats.cxx  crlDensityWeightedStats.h  crlExportDICOM.cxx  crlExtract2DImageFrom3DImage.cxx  crlExtractFromVectorImage.cxx  crlExtractROI.cxx  crlExtractROI2d.cxx  crlExtractROIRGB2d.cxx  crlExtractROItensor.cxx  crlExtractSmallerImageFromImage.cxx  (+59 more)
staple/crkit_build/crkit/release-1.5.2/viz/: .ignore  CMakeLists.txt
staple/crkit_build/crkit/release-1.5.2/viz/code/: CMakeLists.txt  README.txt  (+46 more)
(+386 files in other folders)
