# This is the root ITK CMakeLists file.
#CMAKE_MINIMUM_REQUIRED(VERSION 2.4) OTB 4.2.0
cmake_minimum_required(VERSION 3.2)
#find_package(CUDA REQUIRED)
 
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(Textures)


# Find OTB.
FIND_PACKAGE(OTB REQUIRED)
IF(OTB_FOUND)
    INCLUDE(${OTB_USE_FILE})
ELSE(OTB_FOUND)
    MESSAGE(FATAL_ERROR "OTB not found. Please set OTB_DIR.")
ENDIF(OTB_FOUND)

# Find ITK.
FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
    INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
    MESSAGE(FATAL_ERROR "ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)


PROJECT(TutorialsExamples)

ADD_EXECUTABLE(otbScalarImageToTexturesFilter  otbScalarImageToTexturesFilter.cxx)
# OTB 4.2.0
# TARGET_LINK_LIBRARIES(otbScalarImageToTexturesFilter  OTBCommon OTBIO)
# OTB 5.2.0
TARGET_LINK_LIBRARIES(otbScalarImageToTexturesFilter OTBCommon OTBImageBase OTBImageIO ${ITK_LIBRARIES})


